# desafio-bp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: game.py
app/config/: settings.py
app/core/: entities.py  game.py  main.py
app/web/: controller.py  response.py  server.py
