[tool.poetry]
name = "desafio-bp"
version = "0.1.0"
description = "Desafio BP"
authors = ["Diogo Lima"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
granian = "^1.6.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
